--- a/mApp/package.json
+++ b/mApp/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-safe-area-context": "^4.7.2",
+    "react-native-sse": "^1.1.0",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
