fix: Android 실행 에러 해결 - mergeLibDexDebug Falied 문제 해결 - masked-view가 겹치면서 충돌 발생으로 패키지 하나 제거 - amsked-view는 스크린 이동할때 쓰이고, 두개 이상 패키지 설치하면 안된다.

--- a/mApp/android/app/build.gradle
+++ b/mApp/android/app/build.gradle
@@ -80,6 +80,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        // 해결 : Execution failed for task ':app:mergeLibDexDebug'.
+        multiDexEnabled true
     }
     signingConfigs {
         debug {
@@ -104,6 +106,8 @@ android {
 }
 
 dependencies {
+    // 해결 : Execution failed for task ':app:mergeLibDexDebug'.
+    implementation 'androidx.multidex:multidex:2.0.1'    // add here
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
