--- a/mApp/android/app/src/main/AndroidManifest.xml
+++ b/mApp/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:largeHeap="true"     
+      >
+      <!-- android:largeHeap="true" 메모리힙 늘림 (Execution failed for task ':app:mergeLibDexDebug) 해결 위해 -->
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
