--- a/mApp/package.json
+++ b/mApp/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
@@ -18,12 +18,13 @@
     "bootstrap": "^5.3.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-sse": "^1.1.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "sse": "^0.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +35,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.2.28",
     "@types/react-native": "^0.72.3",
+    "@types/react-native-event-source": "^1.1.1",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
