--- a/mApp/android/gradle.properties
+++ b/mApp/android/gradle.properties
@@ -44,3 +44,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+# 파일에서 AGP 8.0 기본 동작에 대한 미리보기를 활성화 하는 경우
+android.disableAutomaticComponentCreation=true
