--- a/mApp/package.json
+++ b/mApp/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.0",
@@ -42,7 +43,9 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-debugger-open": "^0.4.3",
     "react-test-renderer": "18.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.8.4"
   },
   "engines": {
