--- a/mApp/android/app/src/main/AndroidManifest.xml
+++ b/mApp/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:largeHeap="true"     
+      android:largeHeap="true"
+      android:usesCleartextTraffic="true"
       >
       <!-- android:largeHeap="true" 메모리힙 늘림 (Execution failed for task ':app:mergeLibDexDebug) 해결 위해 -->
+      <!-- android:usesCleartextTraffic="true" : http 통신 허용해주게 함 -->
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
