--- a/mApp/ios/mApp/Info.plist
+++ b/mApp/ios/mApp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<!-- http 통신 허용 시켜주는 기능 -->
+	<key>NSAllowsArbitraryLoads</key>
+	<true/>
+	<!--////////////////////////////-->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
