--- a/mApp/package.json
+++ b/mApp/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-sse": "^1.2.0",
     "react-query": "^3.39.3",
     "sse": "^0.0.8"
   },
