--- a/mApp/package.json
+++ b/mApp/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.25.0",
     "react-native-sse": "^1.2.0",
     "react-query": "^3.39.3",
+    "recoil": "^0.7.7",
     "sse": "^0.0.8"
   },
   "devDependencies": {
