--- a/mApp/package.json
+++ b/mApp/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.72.6",
     "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "^2.13.2",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
