ci; recoil 패키지 설치 - recoil-persist 설치 - redux 대처하여 사용 예정

--- a/mApp/package.json
+++ b/mApp/package.json
@@ -28,6 +28,7 @@
     "react-native-sse": "^1.2.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sse": "^0.0.8"
   },
   "devDependencies": {
