--- a/mApp/package.json
+++ b/mApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/cli-platform-android": "^11.3.9",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/drawer": "^6.6.4",
