--- a/mApp/package.json
+++ b/mApp/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-redux": "^7.1.28",
     "bootstrap": "^5.3.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -28,8 +30,11 @@
     "react-native-screens": "^3.25.0",
     "react-native-sse": "^1.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sse": "^0.0.8"
   },
   "devDependencies": {
