--- a/mApp/package.json
+++ b/mApp/package.json
@@ -34,7 +34,8 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "^5.10.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "sse": "^0.0.8"
   },
   "devDependencies": {
